--- a/public/css/components/card.css
+++ b/public/css/components/card.css
@@ -5,12 +5,17 @@
     background-color: white;
     margin: 50px auto;
     color: black;
+    border-radius: 16px;
+    box-shadow: 0 3px 7px -2px black;
 
     display: grid;
     grid-template-columns: 4fr 6fr;
+
+    animation: up 400ms ease-in-out;
 }
 .card__image {
     background: url("https://source.unsplash.com/collection/10085420/500x500") center center no-repeat;
+    border-radius: 16px 0 0 16px;
 }
 
 .card__details {
@@ -44,4 +49,56 @@
     font-size: 12px;
     text-transform: uppercase;
     font-weight: bold;
+}
+
+/* ==== ANIMATIOM ==== */
+
+.card__nome {
+    opacity: 0;
+    animation: right 400ms ease-in-out 500ms forwards;
+}
+
+.card__idade {
+    opacity: 0;
+    animation: right 400ms ease-in-out 600ms forwards;
+}
+.card__escolaridade {
+    opacity: 0;
+    animation: right 400ms ease-in-out 700ms forwards;
+}
+.card__tipo-aula {
+    opacity: 0;
+    animation: right 400ms ease-in-out 800ms forwards;
+}
+.card__acompanhamento {
+    opacity: 0;
+    animation: right 400ms ease-in-out 900ms forwards;
+}
+.card__data-cadastro {
+    opacity: 0;
+    animation: right 400ms ease-in-out 1s forwards;
+}
+
+@keyframes up {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    from {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+}
+
+@keyframes right {
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
 }
