--- a/public/css/components/header.css
+++ b/public/css/components/header.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: rgb(159, 86, 226);
+    --primary-color: rgb(138, 60, 211);
     --hover-color: rgb(174, 116, 226);
 }
 
@@ -7,6 +7,8 @@
 .header {
     padding: 30px;
     border-bottom: 1px solid rgb(128 128 128 / 11%);
+    background-color: whitesmoke;
+    box-shadow: 0 1px 4px -2px black;
 }
 
 .menu {
@@ -17,7 +19,7 @@
     width: 100%;
     font-size: 20px;
     text-decoration: none;
-    color: white;
+    color: black;
     position: relative;
 }
 
