--- a/views/teachers/teachers.njk
+++ b/views/teachers/teachers.njk
@@ -8,6 +8,7 @@
 <div class="card">
     <section class="card__image"></section>
     <section class="card__details">
+        <h1>Professor</h1>
         <div class="item card__nome">
             <h2 class="nome">Nome completo:</h2>
             <span>Albert Einstein</span>
