--- a/public/css/components/form-teachers.css
+++ b/public/css/components/form-teachers.css
@@ -1,7 +1,7 @@
 
 .card {
     width: 800px;
-    height: 500px;
+    min-height: 500px;
     background-color: white;
     margin: 50px auto;
     color: black;
@@ -21,7 +21,8 @@
 }
 
 .card__image {
-    background: url("https://source.unsplash.com/collection/10085420/500x500") center center no-repeat;
+    background: url("https://source.unsplash.com/collection/10085420/600x600") center center no-repeat;
+    background-size: cover;
     border-radius: 16px 0 0 16px;
 }
 
@@ -38,26 +39,41 @@
     text-transform: capitalize;
 }
 
-.card__details .item:last-child {
+.card__details .card__sexo {
     border: none;
 }
 
 .item h2 {
     color: gray;
-    font-size: 20px;
+    font-size: 18px;
 }
 
-.card__acompanhamento span{
-    padding: 8px 16px;
-    background-color: yellow;
+
+.item input {
+    width: 100%;
+    padding: 8px;
+    outline: none;
     display: inline-block;
-    border-radius: 16px;
     margin-top: 8px;
     font-size: 12px;
-    text-transform: uppercase;
     font-weight: bold;
+    border: none;
 }
 
+.item input[type=radio] {
+    width: auto;
+    margin: 8px 8px;
+}
+
+.card button {
+    width: 100%;
+    padding: 8px;
+    background-color: yellow;
+    border: none;
+    margin-top: 8px;
+    font-weight: bold;
+    cursor: pointer;
+}
 /* ==== ANIMATIOM ==== */
 
 .card__nome {
@@ -77,11 +93,11 @@
     opacity: 0;
     animation: right 400ms ease-in-out 800ms forwards;
 }
-.card__acompanhamento {
+.card__materia {
     opacity: 0;
     animation: right 400ms ease-in-out 900ms forwards;
 }
-.card__data-cadastro {
+.card__sexo {
     opacity: 0;
     animation: right 400ms ease-in-out 1s forwards;
 }
