--- a/views/layout.njk
+++ b/views/layout.njk
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <nav class="menu">
-            <a href="#" class="menu__link menu__active">Teachers</a>
+            <a href="/" class="menu__link menu__active">Teachers</a>
             <a href="#" class="menu__link">Students</a>
         </nav>
     </header>
